test/fails/bad_tags/assign1.lgl
tag a is vec2;

void main() {
    vec2 x = [1., 2.]; 
    a y = x; // No downcasting!
}
